@@ -113,7 +113,7 @@ gdk_property_get (GdkWindow   *window,
   guchar *ret_data;
 
   g_return_val_if_fail (window != NULL, FALSE);
-  g_return_val_if_fail (!GDK_IS_WINDOW (window), FALSE);
+  g_return_val_if_fail (GDK_IS_WINDOW (window), FALSE);
 
   if (window)
     {
@@ -202,7 +202,7 @@ gdk_property_change (GdkWindow   *window,
   Window xwindow;
 
   g_return_if_fail (window != NULL);
-  g_return_if_fail (!GDK_IS_WINDOW (window));
+  g_return_if_fail (GDK_IS_WINDOW (window));
 
   if (window)
     {
@@ -230,7 +230,7 @@ gdk_property_delete (GdkWindow *window,
   Window xwindow;
 
   g_return_if_fail (window != NULL);
-  g_return_if_fail (!GDK_IS_WINDOW (window));
+  g_return_if_fail (GDK_IS_WINDOW (window));
 
   if (window)
     {
